# student-manager

api/: pyproject.toml
api/api/: settings.py  urls.py
api/classes/: models.py  serializers.py  test_classes.py  views.py
api/classes/migrations/: 0001_initial.py  0002_class_is_active.py  0003_class_year.py
api/students/: models.py  serializers.py  views.py
api/students/migrations/: 0001_initial.py
api/users/: models.py  serializers.py  test_users.py  views.py
api/users/migrations/: 0001_initial.py
frontend/: package-lock.json  package.json
frontend/src/: main.jsx
frontend/src/components/: ButtonAdd.jsx  ErrorState.jsx  LoadingState.jsx  NavPage.jsx  RoleRoute.jsx  SearchBar.jsx
frontend/src/pages/classes/: ClassFilters.jsx  index.jsx
frontend/src/pages/dashboard/: index.jsx
frontend/src/pages/home/: index.jsx
frontend/src/pages/login/: index.jsx
frontend/src/pages/users/: index.jsx
frontend/src/routers/: index.jsx
frontend/src/services/: api.js
frontend/src/services/auth/: auth.js
frontend/src/services/classes/: classes.js
frontend/src/services/notification/: notification.js
frontend/src/services/users/: users.js
frontend/src/utils/: HandleError.js
